# loop-marketing

./: AGENTS.md  CHECKPOINT.md  CLAUDE.md  CONTEXT_INDEX.json  CONTEXT_PROTOCOL.md  DECISIONS.jsonl  LEIAME.md  PROJECT.json  README.md  SKILL.md  SOBRE.md  SOURCE_INDEX.json  WORKLOG.jsonl
artifacts/P1/: architecture-map.md  audit.json  inventory.json  risk-register.json
artifacts/P2/: canonical-spec.md  (+4 more)
candidate/loop-marketing-v2/: pyproject.toml  setup.py
candidate/loop-marketing-v2/adapters/: adapter-contract.json
candidate/loop-marketing-v2/data/: relationship-map.json
candidate/loop-marketing-v2/src/loop_marketing_runtime/: __init__.py  adapters.py  cli.py  evaluation.py  models.py  secure_adapters.py  secure_runtime.py  validation.py
candidate/loop-marketing-v2/tests/: test_catalog_router.py  test_evaluation.py  test_observability.py  test_orchestrator_e2e.py  test_secure_runtime.py  test_security.py  test_state_store.py  test_validation_adapters.py
commands/: ampliar-agent.md  loop-planning-agent.md  orientar-agent.md  projeto-template.md  refinar-agent.md  verbalizar-agent.md
loop-marketing/: SKILL.md
scripts/: context_guard.py  p1_integrate.py  p1_inventory.py  p1_validate.py  p2_integrate.py  p2_validate.py  p3_integrate.py  p3_regression.py  p3_seal.py  p3_validate.py  p4_integrate.py  p4_regression.py  p4_seal.py  p4_validate.py  p5_regression.py  p5_seal.py  p5_validate.py  p6_regression.py  p6_seal.py  p6_validate.py  p7_evaluate.py  p7_seal.py  p7_validate.py  p8_seal.py  p8_validate.py
tests/: test_conversation_runtime.py
(+100 files in other folders)
